Bug 92750 - Fizilla doesn't ask to save changes when quitting with Cmd-Q. r=brade/sr=sfraser